<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    android:gravity="center"
    android:background="@color/color_primary">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@mipmap/kairostravel_icon"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/color_accent"
        android:layout_marginBottom="32dp"/>

    <EditText
        android:id="@+id/etRegEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#DDDDDD"
        android:textColor="@color/color_accent"
        android:backgroundTint="@color/color_accent"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/etRegPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#DDDDDD"
        android:textColor="@color/color_accent"
        android:backgroundTint="@color/color_accent"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/etRegPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Confirmar Contraseña"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#DDDDDD"
        android:textColor="@color/color_accent"
        android:backgroundTint="@color/color_accent"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btnRegisterSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        app:backgroundTint="@color/color_accent"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tvBackToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_back_login"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textColor="@color/color_accent"/>

</LinearLayout>